Add subscription management features and localization support
- Introduced SubscriptionSuccess and SubscriptionCancelled pages to handle subscription status updates.
- Enhanced UserContext to include stripe_customer_id and stripe_subscription_id for better subscription management.
- Added new translation keys in en.json and fr.json for subscription-related messages, improving multilingual support.
- Implemented subscription upgrade and cancellation functionalities in the Profile component, including a confirmation dialog for cancellation.

This update significantly enhances the subscription management experience, providing users with clear options and feedback regarding their subscription status while maintaining a consistent and professional interface across languages.

--- a/reviews/src/i18n/locales/en.json
+++ b/reviews/src/i18n/locales/en.json
@@ -512,5 +512,29 @@
     "termsOfUse": "Terms of Use",
     "copyright": "© {{year}} {{company}}. All rights reserved.",
     "designedBy": "Designed by {{company}}"
+  },
+  "subscription": {
+    "currentPlan": "Subscription",
+    "plan": "Plan",
+    "free": "Free",
+    "paid": "Professional",
+    "upgrade": "Upgrade to Professional",
+    "cancel": "Cancel Subscription",
+    "confirmCancel": "Are you sure you want to cancel your subscription? You will lose access to premium features at the end of your billing period.",
+    "expiresAt": "Expires On",
+    "active": "Active",
+    "success": {
+      "title": "Subscription Activated!",
+      "message": "Thank you for subscribing! Your Professional plan is now active. You can access all premium features immediately."
+    },
+    "cancelled": {
+      "title": "Subscription Cancelled",
+      "message": "Your subscription has been cancelled successfully. You will continue to have access to premium features until the end of your current billing period, after which you will be moved to the Free plan."
+    },
+    "goToProfile": "Go to Profile",
+    "invalidSession": "Invalid session. Please try subscribing again.",
+    "verificationPending": "Subscription is being processed. Please refresh this page in a moment.",
+    "verificationError": "Unable to verify subscription status. Please check your profile.",
+    "verifying": "Verifying your subscription..."
   }
 }
