Enhance Profile component with subscription upgrade features and localization support
- Updated the Profile component to include a new subscription upgrade section for free users, featuring benefits and a call-to-action button.
- Added new translation keys in en.json and fr.json for subscription-related messages, improving multilingual support.
- Enhanced the layout and design of the subscription information, ensuring a consistent and professional interface across languages.

This update significantly improves the user experience by providing clear options for upgrading subscriptions and enhancing the application's localization capabilities.

--- a/reviews/src/i18n/locales/en.json
+++ b/reviews/src/i18n/locales/en.json
@@ -519,6 +519,14 @@
     "free": "Free",
     "paid": "Professional",
     "upgrade": "Upgrade to Professional",
+    "upgradeToPro": "Upgrade to Professional",
+    "upgradeNow": "Upgrade Now",
+    "unlockFeatures": "Unlock powerful features to take your review management to the next level",
+    "perMonth": "/month",
+    "benefitUnlimited": "Unlimited reviews per month",
+    "benefitMonthlySummary": "AI-powered monthly summary reports",
+    "benefitAdvancedSentiment": "Advanced sentiment analysis",
+    "benefitPrioritySupport": "Priority customer support",
     "cancel": "Cancel Subscription",
     "confirmCancel": "Are you sure you want to cancel your subscription? You will lose access to premium features at the end of your billing period.",
     "expiresAt": "Expires On",
