--- a/reviews/src/i18n/locales/fr.json
+++ b/reviews/src/i18n/locales/fr.json
@@ -526,6 +526,14 @@
     "free": "Gratuit",
     "paid": "Professionnel",
     "upgrade": "Passer au Professionnel",
+    "upgradeToPro": "Passer au Professionnel",
+    "upgradeNow": "S'abonner maintenant",
+    "unlockFeatures": "Débloquez des fonctionnalités puissantes pour améliorer votre gestion des avis",
+    "perMonth": "/mois",
+    "benefitUnlimited": "Avis illimités par mois",
+    "benefitMonthlySummary": "Rapports de résumé mensuels alimentés par l'IA",
+    "benefitAdvancedSentiment": "Analyse de sentiment avancée",
+    "benefitPrioritySupport": "Support client prioritaire",
     "cancel": "Annuler l'abonnement",
     "confirmCancel": "Êtes-vous sûr de vouloir annuler votre abonnement ? Vous perdrez l'accès aux fonctionnalités premium à la fin de votre période de facturation.",
     "expiresAt": "Expire le",
