Enhance localization support in Profile and AddLocation components
- Integrated the useTranslation hook from react-i18next into the Profile and AddLocation components, replacing hardcoded strings with translation keys for improved multilingual support.
- Added new translation keys in en.json and fr.json for various user-facing messages, including error handling and form labels, enhancing the application's localization capabilities.
- Updated the Profile component to display localized titles, descriptions, and error messages, ensuring a consistent user experience across languages.

This update significantly improves the application's multilingual support, allowing users to interact with the platform in their preferred language while maintaining a professional interface.

--- a/reviews/src/i18n/locales/en.json
+++ b/reviews/src/i18n/locales/en.json
@@ -199,7 +199,11 @@
     "editProfile": "Edit Profile",
     "profileUpdated": "Profile updated successfully",
     "updating": "Updating...",
-    "loading": "Loading your profile..."
+    "loading": "Loading your profile...",
+    "notSet": "Not set",
+    "saving": "Saving...",
+    "unknown": "Unknown",
+    "failedUpdate": "Failed to update profile"
   },
   "reviews": {
     "title": "Reviews",
@@ -320,11 +324,24 @@
   "location": {
     "title": "Locations",
     "addLocation": "Add Location",
+    "addLocationTitle": "Add Location",
+    "addLocationDescription": "Add a new location to track reviews and customer feedback",
     "noLocationsYet": "No locations yet",
     "addFirstLocation": "Add your first location to start tracking reviews",
     "locationName": "Location Name",
+    "locationNamePlaceholder": "e.g., Downtown Store, Main Office",
+    "streetAddress": "Street Address",
+    "addressPlaceholder": "Start typing an address...",
+    "stateProvince": "State/Province",
+    "statePlaceholder": "NY",
+    "countryPlaceholder": "United States",
+    "postalCodePlaceholder": "10001",
+    "phoneNumber": "Phone Number",
+    "phonePlaceholder": "+1 (555) 123-4567",
+    "emailPlaceholder": "location@company.com",
     "address": "Address",
     "city": "City",
+    "cityPlaceholder": "New York",
     "state": "State",
     "country": "Country",
     "postalCode": "Postal Code",
@@ -336,7 +353,15 @@
     "locationDetails": "Location Details",
     "fetchReviews": "Fetch Reviews:",
     "fetching": "Fetching...",
-    "fetch": "Fetch {{platform}}"
+    "fetch": "Fetch {{platform}}",
+    "creating": "Creating...",
+    "createLocation": "Create Location",
+    "companyIdNotFound": "Company ID not found",
+    "pleaseFillRequired": "Please fill in all required fields",
+    "failedCreate": "Failed to create location",
+    "addLocationSeoTitle": "Add Location - Boresha",
+    "addLocationSeoDescription": "Add a new location to your company for review tracking and analysis.",
+    "addLocationSeoKeywords": "add location, business location, company location, review tracking"
   },
   "platform": {
     "title": "Platform Connection",
