--- a/reviews/src/i18n/locales/fr.json
+++ b/reviews/src/i18n/locales/fr.json
@@ -263,7 +263,11 @@
     "editProfile": "Modifier le profil",
     "profileUpdated": "Profil mis à jour avec succès",
     "updating": "Mise à jour...",
-    "loading": "Chargement de votre profil..."
+    "loading": "Chargement de votre profil...",
+    "notSet": "Non défini",
+    "saving": "Enregistrement...",
+    "unknown": "Inconnu",
+    "failedUpdate": "Échec de la mise à jour du profil"
   },
   "reviews": {
     "title": "Avis",
@@ -384,11 +388,24 @@
   "location": {
     "title": "Emplacements",
     "addLocation": "Ajouter un emplacement",
+    "addLocationTitle": "Ajouter un emplacement",
+    "addLocationDescription": "Ajoutez un nouvel emplacement pour suivre les avis et les commentaires des clients",
     "noLocationsYet": "Aucun emplacement pour le moment",
     "addFirstLocation": "Ajoutez votre premier emplacement pour commencer à suivre les avis",
     "locationName": "Nom de l'emplacement",
+    "locationNamePlaceholder": "ex. : Magasin du centre-ville, Bureau principal",
+    "streetAddress": "Adresse",
+    "addressPlaceholder": "Commencez à taper une adresse...",
+    "stateProvince": "État/Province",
+    "statePlaceholder": "NY",
+    "countryPlaceholder": "États-Unis",
+    "postalCodePlaceholder": "10001",
+    "phoneNumber": "Numéro de téléphone",
+    "phonePlaceholder": "+1 (555) 123-4567",
+    "emailPlaceholder": "emplacement@entreprise.com",
     "address": "Adresse",
     "city": "Ville",
+    "cityPlaceholder": "New York",
     "state": "État",
     "country": "Pays",
     "postalCode": "Code postal",
@@ -400,7 +417,15 @@
     "locationDetails": "Détails de l'emplacement",
     "fetchReviews": "Récupérer les avis :",
     "fetching": "Récupération...",
-    "fetch": "Récupérer {{platform}}"
+    "fetch": "Récupérer {{platform}}",
+    "creating": "Création...",
+    "createLocation": "Créer l'emplacement",
+    "companyIdNotFound": "ID d'entreprise non trouvé",
+    "pleaseFillRequired": "Veuillez remplir tous les champs obligatoires",
+    "failedCreate": "Échec de la création de l'emplacement",
+    "addLocationSeoTitle": "Ajouter un emplacement - Boresha",
+    "addLocationSeoDescription": "Ajoutez un nouvel emplacement à votre entreprise pour le suivi et l'analyse des avis.",
+    "addLocationSeoKeywords": "ajouter emplacement, emplacement entreprise, emplacement société, suivi avis"
   },
   "pricing": {
     "title": "Tarification",
