Enhance localization support for subscription features in English and French
- Added new translation keys in en.json and fr.json for subscription-related messages, including prompts for paid plans and pricing information.
- Updated existing keys to improve clarity and user guidance regarding subscription features and upgrade options.
- This update enhances the application's multilingual support, ensuring users receive clear and relevant information about subscription plans in their preferred language.

--- a/reviews/src/i18n/locales/en.json
+++ b/reviews/src/i18n/locales/en.json
@@ -323,7 +323,10 @@
     "generateSummary": "Generate Summary",
     "summaryAlreadyGenerated": "Summary already generated",
     "summaryGeneratedSuccess": "Summary generated successfully!",
-    "totalOutOfFive": "/ 5.0"
+    "totalOutOfFive": "/ 5.0",
+    "requiresPaidPlan": "Monthly summaries require a paid plan",
+    "upgradeToAccess": "Upgrade to Pro or Enterprise to access monthly summary features",
+    "viewPricing": "View Pricing"
   },
   "successLocation": {
     "seoTitle": "Location Created - Boresha",
