Refactor LocationComponent and PlatformConnectionDialog for improved platform connection management
- Replaced CircularProgress with LinkIcon for platform connection button, adhering to skeleton loading standards.
- Enhanced LocationComponent to manage platform connections more effectively, including filtering available platforms and handling connection callbacks.
- Updated PlatformConnectionDialog to support location-specific connections and improved state management for platform selection.
- Added new translation keys for connecting platforms in en.json and fr.json, enhancing localization support.

This update significantly improves the user experience by streamlining the platform connection process and ensuring compliance with UI/UX standards.

--- a/reviews/src/i18n/locales/en.json
+++ b/reviews/src/i18n/locales/en.json
@@ -371,6 +371,7 @@
     "fetchReviews": "Fetch Reviews:",
     "fetching": "Fetching...",
     "fetch": "Fetch {{platform}}",
+    "connectPlatform": "Connect Platform",
     "creating": "Creating...",
     "createLocation": "Create Location",
     "companyIdNotFound": "Company ID not found",
@@ -435,7 +436,10 @@
       "yelp": "Found in your business URL: yelp.com/biz/[business-id]",
       "opentable": "Found in your restaurant URL or OpenTable settings",
       "tripadvisor": "Found in your location URL (e.g., tripadvisor.com/Restaurant_Review...)"
-    }
+    },
+    "connectPlatformToLocation": "Connect Platform to Location",
+    "selectPlatform": "Select a Platform",
+    "jobCreatedMessage": "A job has been created to get your reviews. Reviews will be available shortly."
   },
   "pricing": {
     "title": "Pricing",
