Enhance localization support for pricing features in English and French
- Added new translation keys in en.json and fr.json for pricing-related messages, including titles, subtitles, and FAQs.
- Updated existing keys to improve clarity and user guidance regarding pricing options and features.
- This update enhances the application's multilingual support, ensuring users receive clear and relevant information about pricing plans in their preferred language.

--- a/reviews/src/i18n/locales/en.json
+++ b/reviews/src/i18n/locales/en.json
@@ -443,6 +443,8 @@
   },
   "pricing": {
     "title": "Pricing",
+    "pricingTitle": "Simple, Transparent Pricing",
+    "pricingSubtitle": "Choose the plan that fits your business needs. Upgrade or downgrade at any time.",
     "choosePlan": "Choose your plan",
     "free": "Free",
     "pro": "Pro",
@@ -451,7 +453,28 @@
     "getStarted": "Get Started",
     "currentPlan": "Current Plan",
     "upgrade": "Upgrade",
-    "features": "Features"
+    "features": "Features",
+    "backToHome": "Back to Home",
+    "loadingPlans": "Loading plans...",
+    "mostPopular": "MOST POPULAR",
+    "current": "CURRENT",
+    "perMonth": "/month",
+    "choosePlanButton": "Choose Plan",
+    "loading": "Loading...",
+    "feature": "Feature",
+    "unlimited": "Unlimited",
+    "faqTitle": "Frequently Asked Questions",
+    "faq1Question": "Can I upgrade or downgrade my plan?",
+    "faq1Answer": "Yes, you can change your plan at any time. When you upgrade, you'll be charged a prorated amount. When you downgrade, the changes will take effect at the end of your current billing cycle.",
+    "faq2Question": "What happens if I exceed my free plan limit?",
+    "faq2Answer": "When you reach 25 reviews on the free plan, you can either upgrade to a paid plan for unlimited reviews, or wait until the next sync when you can fetch more reviews.",
+    "faq3Question": "How do monthly summaries work?",
+    "faq3Answer": "Monthly summaries are automatically generated at the end of each month for paid plan users. They include aggregated sentiment data, top keywords, topics, and trends to help you understand customer feedback patterns.",
+    "faq4Question": "What platforms are supported?",
+    "faq4Answer": "We support Google, Facebook, Yelp, OpenTable, and TripAdvisor. More platforms are being added regularly based on user feedback.",
+    "ctaTitle": "Ready to get started?",
+    "ctaSubtitle": "Join hundreds of businesses managing their online reputation",
+    "startFreeTrial": "Start Your Free Trial"
   },
   "header": {
     "menu": "Menu",
