--- a/reviews/src/i18n/locales/fr.json
+++ b/reviews/src/i18n/locales/fr.json
@@ -450,6 +450,8 @@
   },
   "pricing": {
     "title": "Tarification",
+    "pricingTitle": "Tarification simple et transparente",
+    "pricingSubtitle": "Choisissez le forfait qui correspond aux besoins de votre entreprise. Passez à un forfait supérieur ou inférieur à tout moment.",
     "choosePlan": "Choisissez votre forfait",
     "free": "Gratuit",
     "pro": "Pro",
@@ -458,7 +460,28 @@
     "getStarted": "Commencer",
     "currentPlan": "Forfait actuel",
     "upgrade": "Mettre à niveau",
-    "features": "Fonctionnalités"
+    "features": "Fonctionnalités",
+    "backToHome": "Retour à l'accueil",
+    "loadingPlans": "Chargement des forfaits...",
+    "mostPopular": "LE PLUS POPULAIRE",
+    "current": "ACTUEL",
+    "perMonth": "/mois",
+    "choosePlanButton": "Choisir le forfait",
+    "loading": "Chargement...",
+    "feature": "Fonctionnalité",
+    "unlimited": "Illimité",
+    "faqTitle": "Questions fréquemment posées",
+    "faq1Question": "Puis-je passer à un forfait supérieur ou inférieur ?",
+    "faq1Answer": "Oui, vous pouvez changer de forfait à tout moment. Lors d'une mise à niveau, un montant au prorata vous sera facturé. Lors d'une rétrogradation, les modifications prendront effet à la fin de votre cycle de facturation actuel.",
+    "faq2Question": "Que se passe-t-il si je dépasse la limite de mon forfait gratuit ?",
+    "faq2Answer": "Lorsque vous atteignez 25 avis sur le forfait gratuit, vous pouvez soit passer à un forfait payant pour des avis illimités, soit attendre la prochaine synchronisation pour récupérer plus d'avis.",
+    "faq3Question": "Comment fonctionnent les résumés mensuels ?",
+    "faq3Answer": "Les résumés mensuels sont automatiquement générés à la fin de chaque mois pour les utilisateurs de forfaits payants. Ils incluent des données de sentiment agrégées, les mots-clés principaux, les sujets et les tendances pour vous aider à comprendre les modèles de commentaires des clients.",
+    "faq4Question": "Quelles plateformes sont prises en charge ?",
+    "faq4Answer": "Nous prenons en charge Google, Facebook, Yelp, OpenTable et TripAdvisor. D'autres plateformes sont ajoutées régulièrement en fonction des commentaires des utilisateurs.",
+    "ctaTitle": "Prêt à commencer ?",
+    "ctaSubtitle": "Rejoignez des centaines d'entreprises qui gèrent leur réputation en ligne",
+    "startFreeTrial": "Commencer votre essai gratuit"
   },
   "header": {
     "menu": "Menu",
