Update heroSubtitle in English and French localization files for clarity
- Modified the heroSubtitle in both en.json and fr.json to remove redundant wording, enhancing the clarity of the message.
- This update improves user understanding of the platform's capabilities by providing a more concise description of the service offered.

--- a/reviews/src/i18n/locales/en.json
+++ b/reviews/src/i18n/locales/en.json
@@ -484,7 +484,7 @@
   },
   "home": {
     "heroTitle": "Take Control of Your Online Reputation",
-    "heroSubtitle": "Monitor, analyze, and respond to customer reviews from all major platforms in one unified dashboard.",
+    "heroSubtitle": "Monitor and analyze customer reviews from all major platforms in one unified dashboard.",
     "getStartedFree": "Get Started Free",
     "viewPricing": "View Pricing",
     "featuresTitle": "Everything You Need",
