--- a/reviews/src/i18n/locales/fr.json
+++ b/reviews/src/i18n/locales/fr.json
@@ -491,7 +491,7 @@
   },
   "home": {
     "heroTitle": "Reprenez le contrôle de votre réputation en ligne",
-    "heroSubtitle": "Surveillez, analysez et répondez aux avis clients depuis toutes les grandes plateformes dans un tableau de bord unifié.",
+    "heroSubtitle": "Surveillez et analysez les avis clients depuis toutes les grandes plateformes dans un tableau de bord unifié.",
     "getStartedFree": "Commencer gratuitement",
     "viewPricing": "Voir les tarifs",
     "featuresTitle": "Tout ce dont vous avez besoin",
