--- a/reviews/src/i18n/locales/fr.json
+++ b/reviews/src/i18n/locales/fr.json
@@ -188,7 +188,43 @@
     "editCompanyDialog": "Modifier l'entreprise",
     "companiesSeoTitle": "Entreprises - Boresha",
     "companiesSeoDescription": "Gérez toutes vos entreprises commerciales en un seul endroit. Ajoutez, modifiez et surveillez plusieurs entreprises et leurs performances d'avis.",
-    "companiesSeoKeywords": "gérer entreprises, gestion d'entreprise, plusieurs entreprises, tableau de bord entreprise"
+    "companiesSeoKeywords": "gérer entreprises, gestion d'entreprise, plusieurs entreprises, tableau de bord entreprise",
+    "platformSelectionStep1": "Étape 1 : Sélectionner vos plateformes d'avis",
+    "platformSelectionStep1NoSelection": "Étape 1 : Sélectionner vos plateformes d'avis",
+    "platformSelectionStep1Partial": "Étape 1 : Compléter votre sélection de plateformes",
+    "platformSelectionDescriptionNoSelection": "Avant de pouvoir commencer à gérer vos entreprises et avis, vous devez sélectionner les plateformes à partir desquelles vous souhaitez récupérer les avis. Choisissez les plateformes d'avis les plus importantes pour votre entreprise.",
+    "platformSelectionDescriptionPartial": "Vous avez déjà sélectionné {{count}} plateforme{{plural}}. Complétez votre sélection de plateformes pour tirer le meilleur parti de votre abonnement.",
+    "platformSelectionDescriptionPartialSingular": "",
+    "platformSelectionDescriptionPartialPlural": "s",
+    "platformSelectionRemainingSingular": "Vous pouvez sélectionner {{count}} plateforme supplémentaire parmi vos options disponibles.",
+    "platformSelectionRemainingPlural": "Vous pouvez sélectionner {{count}} plateformes supplémentaires parmi vos options disponibles.",
+    "platformSelectionWarning": "Important : Votre sélection de plateformes ne peut pas être modifiée après la finalisation. Veuillez choisir soigneusement.",
+    "selectPlatforms": "Sélectionner les plateformes",
+    "addCompanyStep2": "Étape 2 : Ajouter votre première entreprise",
+    "addCompanyStep2Description": "Maintenant que vous avez sélectionné vos plateformes d'avis, ajoutez votre première entreprise pour commencer à suivre les avis et gérer votre réputation en ligne.",
+    "addCompanyStep2Button": "Ajouter votre première entreprise",
+    "platformSelectionModalTitle": "Sélectionner vos plateformes",
+    "platformSelectionTitle": "Sélectionner vos plateformes",
+    "platformSelectionDescription": "Choisissez les plateformes d'avis auxquelles vous souhaitez vous connecter. Vous pouvez sélectionner jusqu'à {{max}} plateforme{{plural}}.",
+    "platformSelectionDescriptionPlural": "s",
+    "platformSelectionDescriptionSingular": "",
+    "platformSelectionWarningTitle": "La sélection de plateformes ne peut pas être modifiée",
+    "platformSelectionWarningMessage": "Votre sélection de plateformes est permanente et ne peut pas être modifiée après l'enregistrement. Veuillez choisir soigneusement.",
+    "platformSelectionSearchPlaceholder": "Rechercher des plateformes...",
+    "platformSelectionSelected": "{{selected}} sur {{max}} sélectionné{{plural}}",
+    "platformSelectionSelectedPlural": "s",
+    "platformSelectionSelectedSingular": "",
+    "platformSelectionNoResults": "Aucune plateforme trouvée correspondant à \"{{query}}\"",
+    "platformSelectionSkip": "Passer",
+    "platformSelectionSaving": "Enregistrement...",
+    "platformSelectionContinue": "Continuer",
+    "platformSelectionLoading": "Chargement des plateformes...",
+    "platformSelectionErrorMaxReached": "Vous ne pouvez sélectionner que jusqu'à {{max}} plateforme{{plural}}. Veuillez d'abord retirer une plateforme.",
+    "platformSelectionErrorMaxReachedPlural": "s",
+    "platformSelectionErrorMaxReachedSingular": "",
+    "platformSelectionErrorMinRequired": "Veuillez sélectionner au moins une plateforme",
+    "platformSelectionErrorSaveFailed": "Échec de l'enregistrement des sélections de plateformes",
+    "selectedPlatformsLabel": "Les avis seront récupérés depuis :"
   },
   "platform": {
     "title": "Connexion à la plateforme",
