Refactor CompaniesCompanyCard component for improved styling and functionality
- Enhanced the CompaniesCompanyCard component with updated styling, including a refined hover effect and improved layout for better visual appeal.
- Adjusted typography and spacing for a more consistent and user-friendly interface, aligning with UI/UX standards.
- Integrated additional props for better responsiveness and flexibility in displaying company information.
- Updated localization files to include new onboarding messages, enhancing user guidance during platform selection.

This update significantly improves the user experience by providing a more polished and intuitive design for company cards, ensuring clarity and engagement.

--- a/reviews/src/i18n/locales/en.json
+++ b/reviews/src/i18n/locales/en.json
@@ -215,7 +215,11 @@
     "platformSelectionErrorMaxReachedSingular": "",
     "platformSelectionErrorMinRequired": "Please select at least one platform",
     "platformSelectionErrorSaveFailed": "Failed to save platform selections",
-    "selectedPlatformsLabel": "Reviews will be pulled from:"
+    "selectedPlatformsLabel": "Reviews will be pulled from:",
+    "onboardingPlatformTitleNoSelection": "Get Started: Select Your Platforms",
+    "onboardingPlatformDescriptionNoSelection": "Before you can start managing companies and reviews, you need to select the platforms where you want to pull reviews from.",
+    "onboardingPlatformTitlePartial": "Complete Platform Selection ({{count}} of {{max}} selected)",
+    "onboardingPlatformDescriptionPartial": "You've already selected {{count}} platform{{plural}}. Complete your platform selection to get the most out of your subscription."
   },
   "profile": {
     "title": "Profile Settings",
